Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,19 @@ jobs:
   - script: |
          npm install set fund false
          set cache .npm
+  
+- job: SnykScan
+  displayName: 'Snyk Security Scan'
+  dependsOn: BuildAndScan
+  steps:
+  - script: |
+        echo "Running Snyk security scan"
+        npm install -g snyk 
+        npm config set fund false
+        SNYK_TOKEN=<SNYK_API_TOKEN> snyk test
+        snyk test --severity-threshold=high --json > snyk-results.json
+    displayName: 'Run Snyk Scan'
+
          
 
 
