--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,11 @@ jobs:
   - script: |
          npm install set fund false
          set cache .npm
+  - script: npm run build
+    displayName: 'Build Application'
+
+  - script: npm test
+    displayName: 'Run Unit Tests'
   
 - job: SnykScan
   displayName: 'Snyk Security Scan'
