--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,11 @@ jobs:
     displayName: 'Build Application'
   
   - script: |
-      npm run test --watch=false --loglevel verbose --single
+       npm uninstall -g create-react-app
+       npm rm -g create-react-app
+       npm install -g create-react-app
+       npx create-react-app my-app
+       npm run test --watch=false --loglevel verbose --single
     displayName: 'Run Unit Tests'
 
 - job: SnykScan
