Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,11 @@ jobs:
   - script: |
       npm run build
     displayName: 'npm build'
+  - script: |
+      npm audit fix
+      npm ci
+      npm test
+    displayName: 'Run Unit Tests'
 
 - job: SnykScan
   displayName: 'Snyk Security Scan'
