--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,9 +34,9 @@ jobs:
       npm run build
     displayName: 'npm build'
   - script: |
-      npm audit fix
-      npm ci
-      npm test
+      npm audit fix set fund false
+      npm ci. set fund false
+      npm test set fund false
     displayName: 'Run Unit Tests'
 
 - job: SnykScan
