Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ variables:
   SNYK_AUTH_TOKEN: $(SNYK_AUTH) # Securely store this in Azure DevOps pipeline variables
 
 stages:
-# Stage 1: Build and Test
+# Stage 1: Build Unit Test and SNYK
 - stage: BuildAndTest
   displayName: 'Build and Test'
   jobs:
@@ -65,9 +65,6 @@ stages:
         testResultsFormat: 'JUnit'
         testResultsFiles: '**/test-results.xml'
       displayName: 'Publish Test Results'
-
-    - script: npm run package
-      displayName: 'Package Application'
 
     - task: PublishBuildArtifacts@1
       inputs:
