Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,6 +57,7 @@ stages:
         PathtoPublish: 'snyk-results.json'
         ArtifactName: 'snyk-report'
         publishLocation: 'Container'
+        TargetPath: $(System.DefaultWorkingDirectory)/snyk-report
       displayName: 'Publish Snyk Scan Results'
     - script: |
         cat snyk-results.json
