--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ stages:
       inputs:
         testResultsFormat: 'JUnit'
         searchFolder: --junit-directory/reports
-        testResultsFiles: '**/test-results.xml'
+        testResultsFiles: 'TEST-*.xml'
       displayName: 'Publish Test Results'
 
  
