--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,19 +30,19 @@ stages:
       inputs:
         versionSpec: '18.x' # Specify the Node.js version
         checkLatest: true
-      displayName: 'Install Node.js'
-    - script: npm install
       displayName: 'Install Dependencies'
-      
     - script: npm i sharp
       displayName: 'install image optimizer'
     - script: |
         npm install set fund false
         set cache .npm
         npm audit fix set fund false
-        npm ci test 
-        workingDir: src/reports
+  
+      displayName: 'Install Node.js'
+    - script: npm install
+
       displayName: 'Run Unit Tests'
+    - script: npm ci test
 
    
 
