--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -145,4 +145,47 @@ stages:
                     # Replace with actual commands to collect feedback
                   displayName: 'Collect Feedback and Bugs'
 
-
+- stage: SecurityScan
+  displayName: 'Final Security Scanning'
+  dependsOn: Staging
+  condition: succeeded()
+  jobs:
+  - job: SnykScan
+    displayName: 'Run Snyk Scan'
+    pool:
+     vmImage: 'ubuntu-latest'
+    steps:
+    - script: |
+        npm config set fund false --location=global
+        echo "Running Snyk security scan"
+        npm install -g snyk 
+      displayName: 'Run Snyk Scan'
+  
+   
+      
+  
+  
+- stage: Production
+  displayName: 'Deploy to Production'
+  dependsOn: Staging
+  condition: succeeded()
+  jobs:
+  - deployment: DeployToProduction
+    displayName: 'Deploy to Production'
+    environment: 'production'
+    pool:
+      vmImage: 'ubuntu-latest'
+      strategy:
+        runOnce:
+        deploy:
+          steps: 
+          - script: |
+              echo "Deploying to Production..."
+              # Replace with actual deployment script using CPanel
+            displayName: 'Deploy to Production'
+          - task: SendEmail@1
+            inputs:
+              to: 'awogao@gmail.com'
+              subject: 'Production Deployment Status'
+              body: 'Deployment to production was successful!'
+            displayName: 'Send Success Notification'
