Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -167,7 +167,7 @@ stages:
   
 - stage: Production
   displayName: 'Deploy to Production'
-  dependsOn: Staging
+  dependsOn: SecurityScan
   condition: succeeded()
   jobs:
   - deployment: DeployToProduction
