--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,6 +71,27 @@ stages:
         fi
       displayName: 'Check for Critical Vulnerabilities'
    
+- stage: NotifyStage
+  displayName: 'Notification Stage'
+  dependsOn: BuildAndTest
+  condition: succeeded()  # Run this stage if the previous stage succeeds
+  jobs:
+  - job: EmailNotification
+    displayName: 'Send Email Notification'
+    steps:
+    - task: PowerShell@2
+      displayName: 'Send email notification for pending approval'
+      inputs:
+        targetType: 'inline'
+        script: |
+          $smtpServer = "smtp.example.com"
+          $smtpFrom = "awogao@gmail.com"
+          $smtpTo = "awogao@gmail.com"
+          $messageSubject = "Approval Pending for Azure Pipeline"
+          $messageBody = "An Azure Pipeline is awaiting your approval."
+          
+          $smtp = New-Object Net.Mail.SmtpClient($smtpServer)
+          $smtp.Send($smtpFrom, $smtpTo, $messageSubject, $messageBody)
 
 # Testing Environment Deployment   
 - stage: TestDeployment
@@ -144,10 +165,6 @@ stages:
         echo "Running Snyk security scan"
         npm install -g snyk 
       displayName: 'Run Snyk Scan'
-  
-   
-      
-  
   
 - stage: Production
   displayName: 'Deploy to Production'
